[gd_scene load_steps=4 format=3 uid="uid://chvgpj5oj2teu"]

[ext_resource type="Script" uid="uid://c4h20plxnuo3v" path="res://scripts/ui/menu.gd" id="1_ia7bn"]
[ext_resource type="Texture2D" uid="uid://hxc1owi487jq" path="res://assets/images/ui/clouds background.jpeg" id="2_pu4cv"]
[ext_resource type="PackedScene" uid="uid://5w02c5yvt88x" path="res://scenes/ui/button.tscn" id="3_td3ef"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ia7bn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_pu4cv")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 707.0
offset_top = 206.0
offset_right = 1249.0
offset_bottom = 815.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_td3ef")]
layout_mode = 2
text = "Play"

[node name="Decks" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_td3ef")]
layout_mode = 2
text = "Decks"

[node name="Settings" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_td3ef")]
layout_mode = 2
text = "Settings"

[node name="Quit" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_td3ef")]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Decks" to="." method="_on_decks_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
